--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "farkleScorekeeper19",
-  "displayName": "farkleScorekeeper19"
+  "name": "Farkle ScoreKeeper",
+  "displayName": "Farkle Score Keeper"
 }
