--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.6",
-    "react-native": "0.60.0"
+    "react-native": "0.60.0",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.0"
   },
   "devDependencies": {
     "@babel/core": "7.5.0",
@@ -17,11 +22,7 @@
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.8.0",
     "eslint": "6.0.1",
-    "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
